changed anime frontend pages, changed register a little Next: confirm password with email și reset password și forgot password
