# Disertatie_backend/DTO/ReviewDto.cs
@@ -1,4 +1,5 @@
 ﻿using System;
+using System.ComponentModel.DataAnnotations;
 
 namespace Disertatie_backend.DTO
 {
@@ -6,8 +7,16 @@ namespace Disertatie_backend.DTO
     {
         public Guid ReviewId { get; set; }
         public string Username { get; set; }
+        public string User_photo { get; set; }
+
+        [Required]
         public string Short_description { get; set; }
+
+        [Required]
         public string Main_description { get; set; }
+
+        [Required]
+        [Range(1, 10, ErrorMessage = "Value must be between 1 and 10")]
         public byte Stars { get; set; }
     }
 }
